[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menus/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/TeamList.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Dialogs/TeamCreationDialog.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.211765, 0.203922, 0.235294, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[node name="Lobby" type="MarginContainer"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Ordering" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="TopControls" type="HBoxContainer" parent="Ordering" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1004.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="MaxTeamAmount" type="HBoxContainer" parent="Ordering/TopControls" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 202.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="Ordering/TopControls/MaxTeamAmount" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Max Team Amount:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ValueSelect" type="SpinBox" parent="Ordering/TopControls/MaxTeamAmount" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_right = 202.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 2.0
max_value = 16.0
step = 1.0
page = 0.0
value = 8.0
exp_edit = false
rounded = true
editable = false
prefix = ""
suffix = ""
_sections_unfolded = [ "Mouse" ]

[node name="CreateTeam" type="Button" parent="Ordering/TopControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 222.0
margin_right = 314.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Team"
flat = false
align = 1

[node name="WhiteSpace" type="Control" parent="Ordering/TopControls" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 334.0
margin_right = 935.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Leave" type="Button" parent="Ordering/TopControls" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 955.0
margin_right = 1004.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Leave"
flat = false
align = 1

[node name="TeamArea" type="Panel" parent="Ordering" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1004.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "custom_styles" ]

[node name="Ordering" type="HBoxContainer" parent="Ordering/TeamArea" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect" ]

[node name="Teams" type="GridContainer" parent="Ordering/TeamArea/Ordering" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 780.0
margin_bottom = 508.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="TeamList" parent="Ordering/TeamArea/Ordering" index="1" instance=ExtResource( 2 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 784.0
margin_right = 984.0
margin_bottom = 508.0
rect_min_size = Vector2( 200, 0 )
_sections_unfolded = [ "Rect" ]

[node name="BottomControls" type="HBoxContainer" parent="Ordering" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 560.0
margin_right = 1004.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="Ordering/BottomControls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_right = 570.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="TimeToStart" type="Label" parent="Ordering/BottomControls/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 191.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Game Starts in: 0.00 Seconds."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ready" type="Button" parent="Ordering/BottomControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 954.0
margin_right = 1004.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Ready"
flat = false
align = 1

[node name="Dialogs" type="Node" parent="." index="1"]

[node name="TeamCreationDialog" parent="Dialogs" index="0" instance=ExtResource( 3 )]

visible = false

[node name="Timers" type="Node" parent="." index="2"]

[node name="StartGameTimer" type="Timer" parent="Timers" index="0"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="visibility_changed" from="." to="." method="_on_Lobby_visibility_changed"]

[connection signal="value_changed" from="Ordering/TopControls/MaxTeamAmount/ValueSelect" to="." method="_on_MaxTeamAmount_ValueSelect_value_changed"]

[connection signal="pressed" from="Ordering/TopControls/CreateTeam" to="." method="_on_CreateTeam_pressed"]

[connection signal="pressed" from="Ordering/TopControls/Leave" to="." method="_quit_lobby"]

[connection signal="pressed" from="Ordering/BottomControls/Ready" to="." method="_on_Ready_pressed"]

[connection signal="confirmed" from="Dialogs/TeamCreationDialog" to="." method="_on_TeamCreationDialog_confirmed"]

[connection signal="timeout" from="Timers/StartGameTimer" to="." method="_on_StartGameTimer_timeout"]


